--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,10 @@ logging.pattern.console=%d [%level] %c{1.} [%t] %m%n
 # logging.logback.rollingpolicy.max-history=30
 # logging.logback.rollingpolicy.file-name-pattern=PGMAN.%d{yyyy-MM-dd}.%i.log
 
+#file configuration
+guest.source.path=C:\Users\sakas\OneDrive\Desktop\Work\pgman\src\main\resources\static\image\guest
+owner.source.path=C:\Users\sakas\OneDrive\Desktop\Work\pgman\src\main\resources\static\image\owner
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
 server.port=8282
